test/features/errors/runtime/e3009_method_not_found.spl
# E3009: Method Not Found

Feature: E3009 - Method Not Found at Runtime
  As a Simple runtime
  I want to detect when methods are not found
  So that dynamic dispatch issues are caught

  Background:
    Given I have the Simple runtime

  Scenario: Calling non-existent method dynamically
    When I run:
      '''
      struct MyType:
        value: i32

      fn test():
        val obj = MyType { value: 42 }
        # Runtime error: method not found
        obj.call_method("nonexistent")
      '''
    Then I should see runtime error E3009
    And the error message should be "method `{method}` not found on type `{type}`"
    And the label should indicate "method not found at runtime"
    And the help should suggest "check if the method exists for this type"

  Scenario: Valid method call
    When I run:
      '''
      struct MyType:
        value: i32

      impl MyType:
        fn get_value() -> i32:
          self.value

      fn test():
        val obj = MyType { value: 42 }
        val v = obj.get_value()  # OK
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      struct MyType:
        value: i32

      fn test():
        val obj = MyType { value: 42 }
        obj.call_method("missing")
      '''
    Then I should see runtime error E3009
    And the error message should contain "메서드를 찾을 수 없음"
